--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet" />
-    <title>Hello FHEVM Interactive</title>
+    <title>ZemaDemy</title>
+    <link rel="icon" href="/zama-logo.png" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
